[tool.poetry]
name = "jupyterbook-hnishi"
version = "0.1.0"
description = "hnishi's jupyter book"
authors = ["hnishi <nishigami2509@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.10.1"
ghp-import = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
